--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,15 @@
 body {
   @apply bg-background text-primary m-6
 }
+@layer utilities {
+  @variants responsive {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+  }
+}
